# python-fsutil

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-fuzz.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  pre-commit-autoupdate.yml  test-package.yml
fsutil/: __init__.py  archives.py  args.py  checks.py  converters.py  core.py  deps.py  info.py  io.py  metadata.py  operations.py  paths.py  types.py
fuzz/: fuzz_io.py  fuzz_paths.py
src/fsutil/: __init__.py  converters.py  info.py  io.py  metadata.py  operations.py  perms.py
tests/: conftest.py  test.py  test_archives.py  test_args.py  test_checks.py  test_converters.py  test_core.py  test_deps.py  test_info.py  test_io.py  test_metadata.py  test_operations.py  test_paths.py  test_perms.py
