[metadata]
name = python-fsutil
version = 0.8.0
author = Fabio Caccamo
author_email = fabio.caccamo@gmail.com
description = file-system utilities for lazy devs.
keywords =
    python
    file
    system
    util
    utils
    utility
    utilities
    dir
    directory
    path
    fs
    os
    shutil
    glob
url = https://github.com/fabiocaccamo/python-fsutil
download_url = https://github.com/fabiocaccamo/python-fsutil/archive/0.8.0.tar.gz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Desktop Environment :: File Managers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Filesystems
    Topic :: Utilities
project_urls =
    Documentation = https://github.com/fabiocaccamo/python-fsutil#readme
    Issues = https://github.com/fabiocaccamo/python-fsutil/issues
    Funding = https://github.com/sponsors/fabiocaccamo/
    Twitter = https://twitter.com/fabiocaccamo

[options]
packages = find:
install_requires =
include_package_data = True

[options.packages.find]
exclude = contrib; docs; tests*
